--- a/QuizHome/QuizHome.css
+++ b/QuizHome/QuizHome.css
@@ -24,6 +24,11 @@ body {
     justify-content:center;
 }
 
+a{
+    width:100%;
+    margin-left:50px;
+}
+
 button {
     background-color: pink;
     border-radius: 20px;
