--- a/Friends/Friends.css
+++ b/Friends/Friends.css
@@ -185,7 +185,8 @@ button{
 
 .header > h1{
     font-size:24px;
-    width:300px;
+    width:280px;
+    margin:0 auto;
 }
 
 .question{
@@ -204,6 +205,6 @@ width: 70%;
 }
 
 #numero{
-font-size:30px;
+font-size:27px;
 }}
 
