--- a/Friends/Home.css
+++ b/Friends/Home.css
@@ -1,3 +1,11 @@
+@font-face{font-family:New4;
+	src: url(New4.ttf)
+	}
+
+@font-face{font-family:C67;
+	src: url(C67.ttf)
+	}
+
 *{box-sizing: border-box;
 padding:0;
 margin:0}
@@ -34,7 +42,7 @@ flex-direction: column;
 font-family:C67;
 color:navy;
 font-size:29px;
-
+margin:0 auto;
 }
 
 
@@ -61,10 +69,11 @@ transform:rotate(20deg);
 }
 
 
-@media (max-width:1320px){
+@media (max-width:720px){
 
 .menu{
 width:250px;
+height:auto;
 display:flex;
 align-items: center;
 justify-content:center;
