--- a/Friends/Home.css
+++ b/Friends/Home.css
@@ -13,6 +13,10 @@ margin:0}
 
 body{
 background-color:#f6eedf;
+background-image: url(friends.jpg);
+background-repeat: no-repeat;
+background-size:cover;
+background-position:center;
 
 }
 
@@ -29,7 +33,7 @@ justify-content:space-evenly;
 background-color:#dfd3c3;
 height:450px;
 border-radius:30px;
-border:5px solid red;
+border:4px solid green;
 width:300px;
 display:flex;
 align-items: center;
