--- a/Friends/Home.css
+++ b/Friends/Home.css
@@ -17,7 +17,7 @@ background-image: url(friends.jpg);
 background-repeat: no-repeat;
 background-size:cover;
 background-position:center;
-
+margin:0;
 }
 
 .container {
